# python-project-lvl4

./: .dockerignore  .env(example)  .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  linter-and-test-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: custom_views.py  settings.py  urls.py  views.py
task_manager/labels/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/statuses/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_alter_status_options.py
task_manager/tasks/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels_alter_task_author_alter_task_executor.py  0003_alter_task_options_alter_task_description.py
task_manager/templates/: basic.html  create_label.html  create_status.html  create_task.html  delete_label.html  delete_status.html  delete_user.html  labels.html  login.html  main.html  main_page.html  signup.html  statuses.html  task_details.html  tasks.html  update_label.html  update_status.html  update_task.html  update_user.html  users.html
task_manager/users/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
tests/: __init__.py  test_main.py
(+13 files in other folders)
