[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager is a system which allows to set tasks, assign performers and change their statuses. Registration and authentication are required to work with the system."
authors = ["Artem Nechai <lenikol95@mail.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Django = "^4.0"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
django-bootstrap4 = "^21.2"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
wemake-python-styleguide = "^0.15.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
